--- a/flutter05_instagram/ios/Runner/Info.plist
+++ b/flutter05_instagram/ios/Runner/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>사진첩을 사용해도 되나요</string>
+    <key>NSCameraUsageDescription</key>
+    <string>카메라를 써도 되나요</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>마이크를 써도 되나요</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
