--- a/flutter05_instagram/pubspec.yaml
+++ b/flutter05_instagram/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
 
   http: ^1.4.0
+  image_picker: ^1.1.2
+  intl: ^0.20.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
