--- a/flutest/pubspec.yaml
+++ b/flutest/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter05_instagram
+name: flutest
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -31,11 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  http: ^1.4.0
-  image_picker: ^1.1.2
-  intl: ^0.20.2
-  shared_preferences: ^2.5.3
-  provider: ^6.1.5
+  flutter_local_notifications: ^19.2.0
+  timezone: ^0.10.1
+  android_intent_plus: ^5.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -64,8 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/img/
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
